# otus-matrix

./: .travis.yml  CMakeLists.txt
src/: main.cpp  matrix.h  prototype.h
test/: CMakeLists.txt  test.cpp
