cmake_minimum_required(VERSION 3.12)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (NOT DEFINED ENV{TRAVIS_BUILD_NUMBER})
    set(ENV{TRAVIS_BUILD_NUMBER} 1)
endif ()

project(matrix VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER} LANGUAGES CXX)

add_executable(${PROJECT_NAME} src/main.cpp)

set(MY_BUILD_PATH ${CMAKE_CURRENT_BINARY_DIR})
if (NOT DEFINED ENV{CI})
    set(MY_BUILD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
endif ()

add_subdirectory(test)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${MY_BUILD_PATH})

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT ilia64mods@gmail.com)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
include(CPack)
